--- a/Musicalog/Musicalog.Core/Musicalog.Core.csproj
+++ b/Musicalog/Musicalog.Core/Musicalog.Core.csproj
@@ -15,6 +15,8 @@
     </ItemGroup>
 
     <ItemGroup>
+      <PackageReference Include="FluentValidation" Version="10.2.3" />
+      <PackageReference Include="FluentValidation.DependencyInjectionExtensions" Version="10.2.3" />
       <PackageReference Include="Scrutor" Version="3.3.0" />
     </ItemGroup>
 
