--- a/Musicalog/Musicalog/Musicalog.csproj
+++ b/Musicalog/Musicalog/Musicalog.csproj
@@ -5,6 +5,7 @@
     </PropertyGroup>
 
     <ItemGroup>
+      <PackageReference Include="FluentValidation" Version="10.2.3" />
       <PackageReference Include="FluentValidation.AspNetCore" Version="10.2.3" />
       <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="6.0.0-preview.4.21253.7" />
       <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="3.1.5" />
