--- a/Musicalog/Musicalog/Musicalog.csproj
+++ b/Musicalog/Musicalog/Musicalog.csproj
@@ -7,7 +7,7 @@
     <ItemGroup>
       <PackageReference Include="FluentValidation" Version="10.2.3" />
       <PackageReference Include="FluentValidation.AspNetCore" Version="10.2.3" />
-      <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="6.0.0-preview.4.21253.7" />
+      <PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="3.1.16" />
       <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="3.1.5" />
       <PackageReference Include="NSwag.AspNetCore" Version="13.11.3" />
       <PackageReference Include="Scrutor" Version="3.3.0" />
