Trim unused code; exclude all from .idea in .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -364,9 +364,7 @@ MigrationBackup/
 
 # Rider
 # Rider auto-generates .iml files, and contentModel.xml
-**/.idea/**/*.iml
-**/.idea/**/contentModel.xml
-**/.idea/**/modules.xml
+**/.idea
 
 [Pp]ackages/
 
