Move connection string into appsettings files

--- a/Musicalog/Musicalog/appsettings.json
+++ b/Musicalog/Musicalog/appsettings.json
@@ -6,5 +6,8 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "Musicalog": "Data Source=localhost;Initial Catalog=Musicalog;User Id=sa; Password=someThingComplicated1234;"
+  }
 }
