--- a/Musicalog/Musicalog/appsettings.Development.json
+++ b/Musicalog/Musicalog/appsettings.Development.json
@@ -5,5 +5,8 @@
       "Microsoft": "Warning",
       "Microsoft.Hosting.Lifetime": "Information"
     }
+  },
+  "ConnectionStrings": {
+    "Musicalog": "Data Source=localhost;Initial Catalog=Musicalog;User Id=sa; Password=someThingComplicated1234;"
   }
 }
